# easymongo

./: Cargo.toml
src/: lib.rs  main.rs  mongo.rs
