[package]
name = "easymongo"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-only"
description = "A simple and easy to use lib for interacting with MongoDB"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.6.1"
mongodb = "2.5.0"
serde = { version = "1.0.162", features = ["derive"] }



